add publication api
