# src/controllers/product.ts
@@ -20,6 +20,9 @@ import {
   UpdateProductResponse,
   UpdateProductBody,
   RestoreProductResponse,
+  PublicationResponse,
+  PublicationRequest,
+  NonPublicationRequest,
 } from '../types/product';
 import ProductService from '@services/product';
 
@@ -71,10 +74,28 @@ export class ProductController extends Controller {
   @Patch('/restore-product/{id}')
   @Tags('Product')
   @Security('jwt')
-  @Response<DeleteProductResponse>('200', 'OK')
+  @Response<RestoreProductResponse>('200', 'OK')
   @SuccessResponse('200', 'OK')
   public async restoreProduct(@Request() request: AuthedRequest, @Path() id: string): Promise<RestoreProductResponse> {
     const { userId } = request.auth;
     return this.productService.restoreProduct(userId, id);
+  }
+
+  @Patch('/publication')
+  @Tags('Product')
+  @Security('jwt')
+  @Response<PublicationResponse>('200', 'OK')
+  @SuccessResponse('200', 'OK')
+  public async publication(@Body() body: PublicationRequest): Promise<PublicationResponse> {
+    return this.productService.publication(body);
+  }
+
+  @Patch('/non-publication')
+  @Tags('Product')
+  @Security('jwt')
+  @Response<PublicationResponse>('200', 'OK')
+  @SuccessResponse('200', 'OK')
+  public async nonPublication(@Body() body: NonPublicationRequest): Promise<PublicationResponse> {
+    return this.productService.nonPublication(body);
   }
 }
